--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - "2.7"
 cache: apt
 addons:
+  sources:
+  - sourceline: 'ppa:ubuntugis/ubuntugis-unstable'
   apt:
     packages:
     - qgis
