Add badge and new qgis source

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ addons:
   apt:
     sources:
     - sourceline: 'ppa:ubuntugis/ubuntugis-unstable'
+    - sourceline: 'deb http://qgis.org/debian precise main'
+      key_url: 'http://qgis.org/downloads/qgis-2016.gpg.key'
     packages:
     - qgis
     - python-qgis
